Need to lock look to player movment so not out of sync

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,8 @@ fmod_editor.log
 /Library/BurstCache
 /Library/ShaderCache
 /Library/StateCache
+First Person Dungeon Crawler Honours Project/Library/PackageCache/com.unity.burst@1df634d836b8/.Runtime/libburst-llvm-19.dylib
+/First Person Dungeon Crawler Honours Project/Library/PackageCache
+First Person Dungeon Crawler Honours Project/Library/PackageManager/ProjectCache.md5
+First Person Dungeon Crawler Honours Project/Library/PackageManager/ProjectCache
+First Person Dungeon Crawler Honours Project/Library/EditorInstance.json
