--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,9 @@ First Person Dungeon Crawler Honours Project/Library/PackageCache/com.unity.burs
 First Person Dungeon Crawler Honours Project/Library/PackageManager/ProjectCache.md5
 First Person Dungeon Crawler Honours Project/Library/PackageManager/ProjectCache
 First Person Dungeon Crawler Honours Project/Library/EditorInstance.json
+First Person Dungeon Crawler Honours Project/Assets/Scenes/SampleScene.unity
+First Person Dungeon Crawler Honours Project/Assets/InputSystem.inputsettings.asset
+First Person Dungeon Crawler Honours Project/Assets/InputSystem.inputsettings.asset.meta
+First Person Dungeon Crawler Honours Project/Assets/Scripts/PlayerInput.inputactions
+First Person Dungeon Crawler Honours Project/Assets/Scenes/SampleScene.unity
+First Person Dungeon Crawler Honours Project/Assets/Scripts/PlayerInput.inputactions
