--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ First Person Dungeon Crawler Honours Project/Assets/InputSystem.inputsettings.as
 First Person Dungeon Crawler Honours Project/Assets/Scripts/PlayerInput.inputactions
 First Person Dungeon Crawler Honours Project/Assets/Scenes/SampleScene.unity
 First Person Dungeon Crawler Honours Project/Assets/Scripts/PlayerInput.inputactions
+First Person Dungeon Crawler Honours Project/ProjectSettings/EditorBuildSettings.asset
+First Person Dungeon Crawler Honours Project/Library/Bee/fullprofile.json
+First Person Dungeon Crawler Honours Project/Library/UIElements/EditorWindows/UnityEditor.ProjectSettingsWindow.pref
+First Person Dungeon Crawler Honours Project/Library/UIElements/EditorWindows/UnityEngine.InputSystem.Editor.InputActionsEditorWindow.pref
