Movement System created proper
Movement system now uses both new and old systems as I was having issues using just the new ones

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ First Person Dungeon Crawler Honours Project/ProjectSettings/EditorBuildSettings
 First Person Dungeon Crawler Honours Project/Library/Bee/fullprofile.json
 First Person Dungeon Crawler Honours Project/Library/UIElements/EditorWindows/UnityEditor.ProjectSettingsWindow.pref
 First Person Dungeon Crawler Honours Project/Library/UIElements/EditorWindows/UnityEngine.InputSystem.Editor.InputActionsEditorWindow.pref
+/First Person Dungeon Crawler Honours Project/Library/Bee/artifacts
